--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,48 @@ span input {
 		scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
 	}
 }
+
+.clear {
+	clear: both;
+}
+
+.checkBox {
+	display: block;
+	cursor: pointer;
+	width: 40px;
+	height: 40px;
+	border: 3px solid rgba(255, 255, 255, 0);
+	border-radius: 50%;
+	position: relative;
+	overflow: hidden;
+	box-shadow: 0px 0px 0px 2px #00ADB5;
+}
+
+.checkBox div {
+	width: 60px;
+	height: 60px;
+	background-color: #00ADB5;
+	top: -52px;
+	left: -52px;
+	position: absolute;
+	transform: rotateZ(45deg);
+	z-index: 10;
+}
+
+.checkBox input[type="checkbox"]:checked + label + div {
+	left: -10px;
+	top: -10px;
+}
+.checkBox input[type="checkbox"]:checked + label {
+	color: #f7f6bb!important;
+}
+.checkBox input[type="checkbox"] {
+	position: absolute;
+	left: 50px;
+	visibility: hidden;
+}
+
+.transition {
+	transition: 300ms ease;
+}
+
