--- a/src/app/attendence/checkbox.css
+++ b/src/app/attendence/checkbox.css
@@ -13,7 +13,7 @@
 .path {
 	fill: none;
 	stroke: white;
-	stroke-width: 6;
+	stroke-width: 8;
 	stroke-linecap: round;
 	stroke-linejoin: round;
 	transition: stroke-dasharray 0.5s ease, stroke-dashoffset 0.5s ease;
@@ -24,4 +24,5 @@
 .container input:checked ~ svg .path {
 	stroke-dasharray: 70.5096664428711 9999999;
 	stroke-dashoffset: -262.2723388671875;
+	stroke: #00ADB5;
 }
