--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,7 @@ span input {
 	--sb-track-color: #232e3351;
 	--sb-thumb-color: #00adb5;
 	--sb-size: 7px;
+	scroll-behavior: smooth;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
